k3s/policies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: mardan-smart-city
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
